<resources>
    <string name="app_name">Deli Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food.</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="mohamedhassan_gmail_com">mohamedhassan@gmail.com</string>
    <string name="m_h_m">M H M</string>
    <string name="log_out">Log Out</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product Name</string>
    <string name="your_favourite_and_testy_food_is_here">Your favourite and testy food is here!</string>
    <string name="view_more">view more</string>


    <string name="search_your_recipes">search your recipes...</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="_360_000_recipes">Here you will find more than 3,600 meals whose ingredients can be known</string>
    <string name="search_over">search over</string>
    <string name="homechef">HomeChef</string>
    <string name="img_of_recipe">img of recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ready_in">Ready In</string>
    <string name="servings">Servings</string>
    <string name="default_servings_value">000</string>
    <string name="ready_in_min_img">ready in min img</string>
    <string name="img_des">img_des</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="main_picture">main picture</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">reset</string>
    <string name="logout">Logout</string>
    <string name="logo">logo</string>
    <string name="ingredient_image">ingredient image</string>
    <string name="item_name">Item Name</string>
    <string name="the_search_results_for">The Search Results For:</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="choose_your_ingridents">Choose Your Ingridents</string>
    <string name="search">search</string>
    <string name="min">MIN</string>
    <string name="_000">000</string>
    <string name="mins">mins</string>
    <string name="health">health</string>
    <string name="vegetarian">vegetarian</string>
    <string name="not_healthy">Not Healthy</string>
    <string name="ingridients">Ingridients</string>
    <string name="instructions">Instructions</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="you_haven_t_saved_any_favorite_recipes_yet">You haven\'t saved any favorite recipes yet</string>
    <string name="no_results_found">No results found</string>
    <string name="all_the_delicious_food">All the delicious food on your phone</string>
</resources>