<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumGray"
    android:layoutDirection="ltr"
    tools:context=".Activities.Recipe_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_img"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="287dp"
                android:contentDescription="@+id/recipe_img"
                app:srcCompat="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:background="@color/mediumGray"
                android:clickable="false"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipe_title"
                        android:layout_width="match_parent"
                        android:layout_height="66dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="55dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:text="@string/recipe_title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/ready_in_min_img"
                                app:srcCompat="@drawable/ic_timer" />

                            <TextView
                                android:id="@+id/recipe_ready_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/_000" />

                            <TextView
                                android:id="@+id/textView32"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/mins" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/servings"
                                app:srcCompat="@drawable/ic_restaurant_black_24dp" />

                            <TextView
                                android:id="@+id/recipe_servings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/_000" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/health"
                                app:srcCompat="@drawable/ic_spa_black_24dp" />

                            <TextView
                                android:id="@+id/recipe_healthy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/not_healthy" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/ingridients"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recipe_ingredients_rv"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/instructions"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/recipe_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textSize="20sp"
                        android:text="TextView" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>