<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mediumGray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/mediumGray">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/purple_500"
            app:expandedTitleTextAppearance="@style/ShapeAppearance.Material3.Tooltip"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Daily Meals">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="@drawable/custom_app_bar_background"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/logo_delifoof" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.692">

                    <ImageButton
                        android:id="@+id/home_search_btn"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="42dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:contentDescription="@string/search_your_recipes"
                        android:paddingBottom="10dp"
                        android:src="@drawable/ic_search" />

                    <EditText
                        android:id="@+id/home_search_et"
                        android:layout_width="217dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="45dp"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:backgroundTint="#00FFFFFF"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:hint="@string/search_your_recipes"
                        android:inputType="textAutoComplete"
                        android:imeOptions="actionSearch"
                        android:padding="5dp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amita"
                        android:text="@string/_360_000_recipes"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_margin="10dp" />
                </LinearLayout>


            </LinearLayout>

<!--            <androidx.appcompat.widget.Toolbar-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize">-->

<!--            </androidx.appcompat.widget.Toolbar>-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <!--    will be implementing recycler view insted of nested scroll view-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/home_breakfast_filter"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_design"
                android:text="@string/breakfast"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/home_lunch_filter"

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_design"
                android:text="@string/lunch"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/home_dinner_filter"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_design"
                android:text="@string/dinner"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="119dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/empty_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_results_found"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>